<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#80FFFFFF"
    android:orientation="vertical"
    android:layout_gravity="top|center_horizontal" >


        <RelativeLayout
            android:id="@+id/myFrame"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_margin="10dp" >

            <RelativeLayout
                android:id="@+id/controlLinLayout"
                android:layout_width="match_parent"
                android:layout_height="50dp" >

                <Switch
                    android:id="@+id/switchControl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:checked="false"
                    android:textOff=""
                    android:textOn=""
                    android:thumb="@drawable/control_setting_switch"
                    android:track="@color/colorAccent"
                    tools:textOff=" "
                    tools:textOn=" " />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toStartOf="@+id/switchControl"
                    android:text="@string/buttons"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toEndOf="@+id/switchControl"
                    android:text="@string/joystick"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/joystickLinLayout"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@id/controlLinLayout" >

                <Switch
                    android:id="@+id/showJoystick"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:checked="false"
                    android:textOff=""
                    android:textOn=""
                    android:thumb="@drawable/show_joystick_setting_switch"
                    android:track="@color/colorAccent"
                    tools:textOff=""
                    tools:textOn="" />

                <TextView
                    android:id="@+id/showJoystickText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toStartOf="@+id/showJoystick"
                    android:text="@string/not_show"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/showJoystickText2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toEndOf="@+id/showJoystick"
                    android:text="@string/show"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/soundLinLayout"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@id/joystickLinLayout" >

                <Switch
                    android:id="@+id/switchSound"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:checked="false"
                    android:textOff=""
                    android:textOn=""
                    android:thumb="@drawable/sound_setting_switch"
                    android:track="@color/colorAccent"
                    tools:textOff=""
                    tools:textOn="" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:layout_toStartOf="@+id/switchSound"
                    android:text="@string/sound_on"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:layout_toEndOf="@+id/switchSound"
                    android:text="@string/sound_off"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

            </RelativeLayout>


            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:weightSum="4"
                android:layout_below="@id/soundLinLayout" >

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="0dp"
                    android:layout_height="60sp"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:focusable="true"
                    android:src="@drawable/game_background_15" />

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="0dp"
                    android:layout_height="60sp"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:focusable="true"
                    android:src="@drawable/game_background" />

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="0dp"
                    android:layout_height="60sp"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:focusable="true"
                    android:src="@drawable/game_background_16" />

                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="0dp"
                    android:layout_height="60sp"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:focusable="true"
                    android:src="@drawable/game_background_14" />

            </LinearLayout>

        </RelativeLayout>

            <Button
                android:id="@+id/buttonDone"
                android:layout_width="450dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/myFrame"
                android:layout_centerHorizontal="true"
                android:text="@string/done" />


</RelativeLayout>
